--- a/gb/25/11/30/n14645845.md
+++ b/gb/25/11/30/n14645845.md
@@ -18,18 +18,12 @@
 <p>截至今年10月，北区分署已审核通过356案，其中以桃园市经营设施蔬菜为最大宗。桃园“御圃有机农场”林圣智农场主表示，温网室栽培短期叶菜为高度劳力密集产业，从育苗、种植、采收到理货包装皆需大量人工，每0.5公顷约需3至4名专业人力，但本国劳力不易寻得，外籍移工投入后，不仅使生产作业更稳定，也大幅提升整体营运效益，圣智并说明，雇主须熟悉相关法令，妥善照顾与管理移工，提供友善的工作环境。另供应全联洋菇的“玉丰菇菌场”郑玉丰农友指出，过去申请资格须达设施农业0.5公顷规模，经今年修正食用菇蕈产业门槛调降为0.1公顷后，已顺利获核聘雇外籍移工资格，显示政策修订更符合产业实际需要。</p>
 <p>责任编辑：郑桦</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645964.md#1">第十一届航空模型嘉年华会 苗栗市经国飞行场登场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645960.md#1">苗县114年度体育会理事长杯竞技 叠杯锦标赛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645634.md#1">2025铜锣杭菊生活节“菊内人”29日盛大登场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645613.md#1">2025公馆芋头节登场 芋见幸福 柿柿如意</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645623.md#1">114年度竹南镇幼儿亲子运动会 千人齐聚共享欢乐时光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14644996.md#1">2025年苗栗市老人文康中心长青学苑 成果发表会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14644986.md#1">县议会三位议员总质询 关注警察与社工人力及交通等民生议题</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14644970.md#1">副县长表扬志工家长、爱心学生 强调落实平权重要性</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644257.md#1">灌肠不当恐致命 便秘男子直肠破裂引发严重腹膜炎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644237.md#1">南投陶艺家曾树枝 获台湾陶艺薪传成就奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/23/n10418231.md#1" target="_blank">晓明：一个枪口余生者的人生之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/2/27/n4375491.md#1" target="_blank">归宇斌: 江泽民导演天安门伪火的两个意图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/20/2/7/n11852128.md#1">《刘伯温碑记》点明避开瘟疫的真言</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/13/n11042473.md#1" target="_blank">感恩李洪志大师 中西方民众的故事</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
